<resources>
    <string name="app_name">LE DÉMINEUR</string>
    <string name="new_game">Nouvelle Partie</string>
    <string name="difficulty">Difficulté :</string>
    <string name="difficulty_easy">Facile</string>
    <string name="difficulty_normal">Normale</string>
    <string name="difficulty_difficile">Difficile</string>
    <string name="settings">Paramètres</string>
    <string name="credit">Crédit</string>
    <string name="exit">Quitter</string>
    <string name="retour_menu">Retour au menu</string>
    <string name="timer">Timer</string>
    <string name="score">Score</string>
    <string name="switch_text"></string>
    <string name="menu">Menu</string>
    <string name="titre_app">LE DÉMINEUR</string>
    <string name="text_credit">"Ce jeu a été developpé par :\n- Sylvain Courty\n- Caitlin Jolivet\n- Thomas Lépine\n\nLes images et la musique utilisées sont libres de droits !\n\n\n\nNB : Si vous aviez cliqué sur le bouton pour une demande de crédit, ce n'est pas la bonne application, merci de vous tourner vers votre banque ..."</string>
</resources>