<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game">

    <LinearLayout
        android:id="@+id/lyvMain"
        android:layout_width="409dp"
        android:layout_height="602dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/lyhTopMenu"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTimer"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_weight="1"
                android:text="@string/timer"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnBackMenu"
                android:layout_width="34dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/menu" />

            <Switch
                android:id="@+id/swMode"
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:text="@string/switch_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyhHexa"
            android:layout_width="match_parent"
            android:layout_height="495dp"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clyHexa"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <fragment
                    android:id="@+id/fragment"
                    android:name="com.example.minesweeper.Hexa"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="120dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <fragment
                    android:id="@+id/fragment2"
                    android:name="com.example.minesweeper.Hexa"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="96dp"
                    android:layout_marginTop="120dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <fragment
                    android:id="@+id/fragment3"
                    android:name="com.example.minesweeper.Hexa"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="144dp"
                    android:layout_marginTop="120dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <fragment
                    android:id="@+id/fragment4"
                    android:name="com.example.minesweeper.Hexa"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="192dp"
                    android:layout_marginTop="120dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <fragment
                    android:id="@+id/fragment5"
                    android:name="com.example.minesweeper.Hexa"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="168dp"
                    android:layout_marginTop="159dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/temp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"></LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>